<resources>
    <string name="app_name">Pass Repository</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pass_name">Nome da senha</string>
    <string name="pass_type">Tipo da senha:</string>
    <string name="type_numeric">Númerico</string>
    <string name="type_text">Texto</string>
    <string name="type_your_password">Digite sua Senha</string>
    <string name="save">Salvar</string>
    <string name="name_is_mandatory">Campo nome é obrigatorio!</string>
    <string name="password_is_mandatory">Campo \'senha\' é obrigatorio!</string>
    <string name="successfully_created">Nova senha cadastrada com sucesso</string>
    <string name="successfully_updated">Senha alterada com sucesso</string>
    <string name="successfully_deleted">Senha removida com sucesso</string>
    <string name="unexpected_error">Ocorreu um erro inesperado</string>
    <string name="password">Senha</string>
    <string name="reveal_password">Revelar senha</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ERROR_UNEXPECTED">Ocorreu um erro inesperado</string>
    <string name="MANDATORY_CONNECTION">É necessario conexão de internet</string>
</resources>