<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PasswordActivity">

    <TextView
        android:id="@+id/text_pass_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/edit_pass_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_pass_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/text_pass_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_type"
        app:layout_constraintTop_toBottomOf="@id/edit_pass_name"
        app:layout_constraintLeft_toLeftOf="@id/edit_pass_name"
        android:layout_marginTop="32dp"/>

    <RadioGroup
        android:id="@+id/radio_group_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_pass_type"
        app:layout_constraintLeft_toLeftOf="@id/text_pass_type">

        <RadioButton
            android:id="@+id/radio_type_text"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/type_text"/>

        <RadioButton
            android:id="@+id/radio_type_numeric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_numeric" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group_types"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>